# atende-ai

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.claude/skills/conversation-design/: SKILL.md
.claude/skills/feature-implementation/: SKILL.md
.claude/skills/memory-management/: SKILL.md
.claude/skills/prompt-safety/: SKILL.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_soft_delete.py  0003_pgvector_hnsw_index.py
backend/app/: main.py
backend/app/agent/: loop.py  scoring.py  states.py
backend/app/agent/prompts/: agent_template_v3.md  factory_v3.md
backend/app/api/: routes_admin.py  routes_chat.py
backend/app/core/: __init__.py  config.py  database.py  ip_hash.py  logging.py  security.py
backend/app/models/: __init__.py  admin_user.py  knowledge.py  lead.py  lead_event.py  message.py  session.py  usage_log.py
backend/app/schemas/: business_profile.py  chat.py  common.py  conversation_profile.py  lead_extraction.py  niche_profile.py
backend/app/seeds/: __main__.py  admin.py  knowledge.py
backend/app/seeds/knowledge/: 01_sobre_clinica.md  02_servicos_faciais.md  03_servicos_corporais.md  04_avaliacao_gratuita.md  05_formas_pagamento.md  06_pos_tratamento.md  07_faq_clinico.md  08_atendimento_horarios.md  09_equipe.md  10_protocolos_especialidades.md  11_promocoes_vigentes.md  12_faq_comercial.md
backend/app/services/: alerting.py  budget.py  embedder.py  killswitch.py  lead_extractor.py  lead_scoring_v3.py  llm.py  prompt_factory.py  prompt_factory_v3.py  prompt_renderer_v3.py  rate_limit.py  reset.py  retriever.py
backend/app/tests/: conftest.py  test_conversation_profile.py  test_extractor.py  test_factory_v2.py  test_factory_v3.py  test_guards.py  test_integration.py  test_lead_extraction.py  test_lead_extractor.py  test_lead_scoring_v3.py  test_prompt_renderer_v3.py  test_routes_admin.py  test_routes_chat.py  test_security_sprint0.py  test_states.py
docs/: AGENT_PROMPT.md  API.md  ARCHITECTURE.md  CONVERSATION_DESIGN.md  COST_MODEL.md  DEMO.md  DEPLOY.md  DEPLOY_VPS.md  EVALUATION.md  PROPOSTA_SNIPPET.md  REVIEW.md
docs/adr/: ADR-001-conversation-profile.md  ADR-002-contextual-lead-scoring.md  ADR-003-structured-lead-extraction.md
docs/legacy/: agent_template_v2.md  extractor_v1.py  factory_v2.md  meta_prompt_v2.md  sofia_v1.md  test_factory_v2.py  test_scoring_v2.py
docs/screenshots/: README.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: chat-mobile.spec.ts  chat.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
(+22 files in other folders)
