[project]
name = "atende-ai-backend"
version = "0.1.0"
description = "Atende AI backend — FastAPI + Postgres + pgvector + Claude"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "anthropic>=0.42.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.1",
    "structlog>=24.4.0",
    "pgvector>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008", "B007", "UP042", "E402"]  # B008: FastAPI Depends; B007: loop vars for SSE tuple; UP042: str+Enum is SQLAlchemy pattern; E402: FastAPI main imports after app

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["F841"]  # Alembic CREATE TYPE assigns to unused vars (side-effect)
"app/tests/**/*.py" = ["F841", "E741"]  # Test fixtures may assign unused; lambda vars

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "app/seeds/*"]